updated instrument list

--- a/site/anfrage.njk
+++ b/site/anfrage.njk
@@ -164,6 +164,7 @@ title: Anfrage
                 <h2 class="text-x3 md:text-x2 text-primary mb-x1">
                     Deine Instrumente
                 </h2>
+                <p>Bitte füge deine Instrumente einzeln der Liste hinzu und achte darauf, dass die Werte für Instrumente und Zubehör jeweils einzeln angegeben werden.</p><br/>
                 <div class="instrument-list"></div>
                 <button type="button" class="primary-button p-x1 w-full mb-x1p5 md:p-x0p75" data-name="addInstrument">
                     Weiteres Instrument / Zubehör hinzufügen
