added email validation

--- a/site/anfrage.njk
+++ b/site/anfrage.njk
@@ -58,7 +58,7 @@ title: Anfrage
                 </label>
                 <label class="inline-flex flex-col ">
                     E-Mail *
-                    <input name="email" autocomplete="email" required="required"/>
+                    <input name="email" type="email" autocomplete="email" required="required"/>
                 </label>
                 <label class="inline-flex flex-col ">
                     Telefonnummer für Rückfragen
