fixed uppercase letters to lowercase

--- a/site/anfrage.njk
+++ b/site/anfrage.njk
@@ -19,11 +19,11 @@ title: Anfrage
             <div class="relative toggle inline md:flex md:items-stretch overflow-hidden">
                 <input type="radio" value="SINFONIMA" id="SINFONIMA" name="versicherungstyp"/>
                 <label for="SINFONIMA" class="option block py-x1 md:py-x1 md:px-x0p5 flex-1 flex md:mr-x0p5 mb-x1 items-center justify-center" data-sinfonima="data-sinfonima">
-                    Überwiegend Akustische Instrumente
+                    Überwiegend akustische Instrumente
                 </label>
                 <input type="radio" value="IAMSOUND" id="IAMSOUND" name="versicherungstyp"/>
                 <label class="option block py-x1 md:py-x1 md:px-x0p5 flex-1 flex mb-x1 items-center justify-center" for="IAMSOUND" data-imsound="data-imsound">
-                    Überwiegend Elektronische Instrumente & Equipment
+                    Überwiegend elektronische Instrumente & Equipment
                 </label>
             </div>
             <label class="flex flex-col hidden" data-totalvalue="data-totalvalue">
